corrigindo paths dos audios e imagens

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         <tr>
             <td>Flamengo</td>
             <td align="center">1966</td>
-            <td><img src="/Atividade 5/media/flamengo.png" alt="Imagem não encontrada" width="50" height="50"></td>
+            <td><img src="media/flamengo.png" alt="Imagem não encontrada" width="50" height="50"></td>
             <td><a href="https://www.flamengo.com.br" target="_blank">Visite o Site</a></td>
-            <td><audio controls src="/Atividade 5/media/audio/hino-flamengo.mp3"></audio></td>
+            <td><audio controls src="media/audio/hino-flamengo.mp3"></audio></td>
         </tr>
         <tr>
             <td>Fluminense</td>
             <td align="center">1959</td>
-            <td><img src="/Atividade 5/media/fluminense.png" alt="Imagem não encontrada" width="50" height="50"></td>
+            <td><img src="media/fluminense.png" alt="Imagem não encontrada" width="50" height="50"></td>
             <td><a href="https://www.fluminense.com.br" target="_blank">Visite o Site</a></td>
-            <td><audio controls src="/Atividade 5/media/audio/hino-fluminense-fc.mp3"></audio></td>
+            <td><audio controls src="media/audio/hino-fluminense-fc.mp3"></audio></td>
         </tr>
         <tr>
             <td>Grêmio</td>
             <td align="center">1987</td>
-            <td><img src="/Atividade 5/media/gremio.jpg" alt="Imagem não encontrada" width="50" height="50"></td>
+            <td><img src="media/gremio.jpg" alt="Imagem não encontrada" width="50" height="50"></td>
             <td><a href="https://gremio.net/" target="_blank">Visite o Site</a></td>
-            <td><audio controls src="/Atividade 5/media/audio/hino-gremio-rs.mp3"></audio></td>
+            <td><audio controls src="media/audio/hino-gremio-rs.mp3"></audio></td>
         </tr>
     </table>
 </body>
