Atividade de Formulário Atualizada

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     </table>
                 </fieldset>
                 <br>
+                <input type="submit" value="Enviar">
             </fieldset>
-            <input type="submit " name="botaoenviar ">
         </div>
     </form>
 </body>
