--- a/index.html
+++ b/index.html
@@ -5,96 +5,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Cadastro de Fornecedores</title>
 </head>
 
 <body>
     <h2>Cadastro de Fornecedores</h2>
-    <h3>Observação: Todos os campos com (*) são obrigatórios!</h3>
+    <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
     <form action="" method="POST">
         <div>
-            <fieldset style="opacity: 0.8; background-image: url(/img/bgcadastro.png); background-repeat: no-repeat; background-position: right; background-size: 30%;">
+            <fieldset style="background-image: url(/img/bgcadastro.png); background-repeat: no-repeat; background-position: right; background-size: 30%;">
                 <legend><strong>Dados do Fornecedor</strong></legend>
-                <fieldset>
+                <fieldset style="border:ridge; border-radius:10pt;">
                     <legend>Identificação</legend>
                     <table>
                         <tr>
                             <td>Código*</td>
-                            <td><input type=" number " name="codigofornecedor " min="0 " max="999 " maxlength="3 " id=" " required></td>
+                            <td><input type=" number" name="codigofornecedor" min="0" max="999 " maxlength="3" id="" required></td>
                             <td>Nome*</td>
-                            <td><input type="text " name="nomefornecededor " size="50 " maxlength="50 " id=" " required></td>
+                            <td><input type="text" name="nomefornecededor" size="50" maxlength="50" id="" required></td>
                         </tr>
                     </table>
                 </fieldset>
-                <fieldset>
+                <fieldset style="border:ridge; border-radius:10pt;">
                     <legend>Contato</legend>
                     <table>
                         <tr>
                             <td>Telefone 1*</td>
-                            <td><input type="text " name="telefonefornecedor1 " size=15 maxlength="15 " id=" " required></td>
+                            <td><input type="text" name="telefonefornecedor1" size=15 maxlength="15" id="" required></td>
                             <td>Telefone 2</td>
-                            <td><input type="text " name="telefonefornecedor2 " size=15 maxlength="15 " id=" "></td>
+                            <td><input type="text" name="telefonefornecedor2" size=15 maxlength="15" id=""></td>
                         </tr>
                         <tr>
                             <td>Celular*</td>
-                            <td><input type="text " name="celularfornecedor " size=15 maxlength="15 " id=" " required></td>
+                            <td><input type="text" name="celularfornecedor" size=15 maxlength="15" id="" required></td>
                             <td>Whatsapp</td>
-                            <td><input type="text " name="whatsappfornecedor " size=15 maxlength="15 " id=" "></td>
+                            <td><input type="text" name="whatsappfornecedor" size=15 maxlength="15" id=""></td>
                         </tr>
                     </table>
                 </fieldset>
-                <fieldset>
+                <fieldset style="border:ridge; border-radius:10pt;">
                     <legend>Informações Adicionais</legend>
                     <table>
                         <tr>
                             <td>e-mail*</td>
-                            <td><input type="email " name="emailfornecedor " size="100 " maxlength="50 " id=" " required></td>
+                            <td><input type="email" name="emailfornecedor" size="100" maxlength="50" id="" required></td>
                         </tr>
                         <tr>
                             <td>Data de Cadastro*</td>
-                            <td><input type="date " name="datacadastrofornecedor " id=" " required></td>
+                            <td><input type="date" name="datacadastrofornecedor" id="" required></td>
                         </tr>
                         <tr>
                             <td>Data da Última Compra</td>
-                            <td><input type="date " name="dataultcompfornecedor " id=" "></td>
+                            <td><input type="date" name="dataultcompfornecedor" id=""></td>
                         </tr>
                         <tr>
                             <td>Saldo Comprado*</td>
-                            <td><input type="number " name="saldocompradofornecedor " min="0 " max="100000 " maxlength="12 " id=" " required></td>
+                            <td><input type="number" name="saldocompradofornecedor" min="0" max="100000" maxlength="12" id="" required></td>
                         </tr>
                         <tr>
                             <td>Status</td>
-                            <td><input type="text " name="statusfornecedor " size="1 " maxlength="1 " id=" "></td>
+                            <td><input type="text" name="statusfornecedor" size="1" maxlength="1" id=""></td>
                         </tr>
                         <tr>
                             <td>Data da Última Compra</td>
-                            <td><input type="date " name="dataultcompfornecedor " id=" "></td>
+                            <td><input type="date" name="dataultcompfornecedor" id=""></td>
                         </tr>
                         <tr>
                             <td>Observação</td>
-                            <td><textarea rows="5 " cols="50 " maxlength="500 " name="observacaofornecedor " id=" "></textarea></td>
+                            <td><textarea rows="5" cols="50" maxlength="500" name="observacaofornecedor" id=""></textarea></td>
                         </tr>
                     </table>
                 </fieldset>
-                <fieldset>
+                <fieldset style="border:ridge; border-radius: 10pt;">
                     <legend>Dados Bancários</legend>
                     <table>
                         <tr>
                             <td>Banco*</td>
-                            <td><input type="number " name="bancofornecedor " min="000 " max="999 " id=" " required></td>
+                            <td><input type="number" name="bancofornecedor" min="000 " max="999" id="" required></td>
                         </tr>
                         <tr>
                             <td>Agência*</td>
-                            <td><input type="text " name="agenciafornecedor " size="5 " maxlength="5 " id=" " required></td>
+                            <td><input type="text" name="agenciafornecedor" size="5 " maxlength="5" id="" required></td>
                         </tr>
                         <tr>
                             <td>Conta*</td>
-                            <td><input type="text " name="contafornecedor " id=" " required></td>
+                            <td><input type="text" name="contafornecedor" id=" " required></td>
                         </tr>
                     </table>
                 </fieldset>
                 <br>
-                <input type="submit" value="Enviar">
+                <input class="btn btn-primary" type="submit" value="Gravar">
+                <input class="btn btn-secondary" type="button" value="Cancelar">
             </fieldset>
         </div>
     </form>
