--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Cadastro de Fornecedores</title>
 </head>
 
 <body>
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Controle de Cadastros</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-white bg-primary" aria-current="page" href="#">Cadastrar Novo Fornecedor</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark bg-warning" href="#">Alterar Dados de Fornecedores Cadastrados</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
     <h2>Cadastro de Fornecedores</h2>
     <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
     <form action="" method="POST">
@@ -21,9 +42,9 @@
                     <table>
                         <tr>
                             <td>Código*</td>
-                            <td><input type=" number" name="codigofornecedor" min="0" max="999 " maxlength="3" id="" required></td>
+                            <td><input type="number" name="codigofornecedor" min="0" max="999 " maxlength="3" id="" required></td>
                             <td>Nome*</td>
-                            <td><input type="text" name="nomefornecededor" size="50" maxlength="50" id="" required></td>
+                            <td><input type="text" name="nomefornecededor" size="25" maxlength="50" id="" required></td>
                         </tr>
                     </table>
                 </fieldset>
