--- a/produtos.html
+++ b/produtos.html
@@ -15,14 +15,14 @@
             background-position: right;
         }
     </style>
-    <title>Cadastro de Clientes</title>
+    <title>Cadastro de Produtos</title>
 </head>
 
 <body>
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Controle de Cadastros</a>
+                <a class="navbar-brand disabled" href="#">Controle de Cadastros</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -60,7 +60,7 @@
                     </table>
                 </fieldset>
                 <fieldset style="border:ridge; border-radius:10pt;">
-                    <legend>Contato</legend>
+                    <legend>Dimensões e Pesagem</legend>
                     <table>
                         <tr>
                             <td>Unidade*</td>
@@ -75,7 +75,7 @@
                     </table>
                 </fieldset>
                 <fieldset style="border:ridge; border-radius:10pt;">
-                    <legend>Informações Adicionais</legend>
+                    <legend>Informações de Fornecedor/Vendas</legend>
                     <table>
                         <tr>
                             <td>Venda*</td>
