--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand disabled" href="#">Controle de Cadastros</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler pages" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-white bg-primary" aria-current="page" href="#">Cadastrar Novo Fornecedor</a>
+                            <a class="nav-link text-white" data-toggle="tooltip" data-placement="bottom" title="Clique aqui para cadastrar um Fornecedor" aria-current="page" href="#">Cadastrar Novo Fornecedor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark bg-warning" href="./produtos.html">Cadastrar Produtos</a>
+                            <a class="nav-link text-light" data-toggle="tooltip" data-placement="bottom" title="Clique aqui para cadastrar um Produto" href="./produtos.html">Cadastrar Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled text-dark bg-success" href="#">Cadastrar Funcionários(Em construção)</a>
+                            <a class="nav-link  text-light" data-toggle="tooltip" data-placement="bottom" title="Clique aqui para cadastrar um Cliente" href="./clientes.html">Cadastrar Clientes</a>
                         </li>
                     </ul>
                 </div>
@@ -52,10 +52,16 @@
                     <legend>Identificação</legend>
                     <table>
                         <tr>
-                            <td>Código*</td>
-                            <td><input type="number" name="codigofornecedor" min="0" max="999 " maxlength="3" id="" required></td>
-                            <td>Nome*</td>
-                            <td><input type="text" name="nomefornecededor" size="25" maxlength="50" id="" required></td>
+                            <td>CNPJ*</td>
+                            <td><input type="number" name="codigo" size="11" maxlength="11" min="00000000000" max="99999999999" id="" required></td>
+                            <td>
+                                <td><button class="btn btn-primary">Consultar</button></td>
+                            </td>
+                            <tr>
+                                <td>Razão*</td>
+                                <td><input type="text" name="nomefornecededor" size="25" maxlength="50" id="" required></td>
+                            </tr>
+
                         </tr>
                     </table>
                 </fieldset>
@@ -80,7 +86,7 @@
                     <legend>Informações Adicionais</legend>
                     <table>
                         <tr>
-                            <td>e-mail*</td>
+                            <td>E-mail*</td>
                             <td><input type="email" name="emailfornecedor" size="100" maxlength="50" id="" required></td>
                         </tr>
                         <tr>
@@ -92,16 +98,16 @@
                             <td><input type="date" name="dataultcompfornecedor" id=""></td>
                         </tr>
                         <tr>
-                            <td>Saldo Comprado*</td>
-                            <td><input type="number" name="saldocompradofornecedor" min="0" max="100000" maxlength="12" id="" required></td>
+                            <td>Saldo de Compras*</td>
+                            <td><input style="text-align: right;" type="number" name="saldocompradofornecedor" min="0" max="100000" maxlength="12" id="" required>R$</td>
                         </tr>
                         <tr>
                             <td>Status</td>
-                            <td><input type="text" name="statusfornecedor" size="1" maxlength="1" id=""></td>
-                        </tr>
-                        <tr>
-                            <td>Data da Última Compra</td>
-                            <td><input type="date" name="dataultcompfornecedor" id=""></td>
+                            <td><input type="radio" name="statusativo" id="">Ativo</td>
+                            <tr>
+                                <td></td>
+                                <td><input type="radio" name="statusinativo" id="">Inativo</td>
+                            </tr>
                         </tr>
                         <tr>
                             <td>Observação</td>
@@ -114,15 +120,15 @@
                     <table>
                         <tr>
                             <td>Banco*</td>
-                            <td><input type="number" name="bancofornecedor" min="000 " max="999" id="" required></td>
+                            <td><input type="text" name="bancofornecedor" id="" size="3" maxlength="3" style="text-align: right;" required></td>
                         </tr>
                         <tr>
                             <td>Agência*</td>
-                            <td><input type="text" name="agenciafornecedor" size="5 " maxlength="5" id="" required></td>
+                            <td><input type="text" name="agenciafornecedor" size="5" maxlength="5" id="" style="text-align: right;" required></td>
                         </tr>
                         <tr>
                             <td>Conta*</td>
-                            <td><input type="text" name="contafornecedor" id=" " required></td>
+                            <td><input type="text" name="contafornecedor" id="" size="15" maxlength="15" style="text-align: right;" required></td>
                         </tr>
                     </table>
                 </fieldset>
