--- a/produtos.html
+++ b/produtos.html
@@ -22,27 +22,27 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand disabled" href="#">Controle de Cadastros</a>
+                <a class="navbar-brand disabled bg-dark" href="#">Controle de Cadastros</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-white bg-primary" aria-current="page" href="./index.html">Cadastrar Novo Fornecedor</a>
+                            <a class="nav-link text-white" aria-current="page" href="./index.html">Cadastrar Novo Fornecedor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark bg-warning" href="#">Cadastrar Produtos</a>
+                            <a class="nav-link text-light" href="#">Cadastrar Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled text-dark bg-secondary" href="#">Cadastrar Funcionários(Em construção)</a>
+                            <a class="nav-link text-light" href="./clientes.html">Cadastrar Clientes</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
-    <h2>Cadastro de Clientes</h2>
+    <h2>Cadastro de Produtos</h2>
     <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
     <form action="">
         <div>
@@ -52,10 +52,13 @@
                     <legend>Identificação</legend>
                     <table>
                         <tr>
-                            <td>Código*</td>
-                            <td><input type="number" name="codigofornecedor" min="0" max="999 " maxlength="13" id="" required></td>
-                            <td>Descrição</td>
-                            <td><input type="text" name="nomefornecededor" size="25" maxlength="50" id=""></td>
+                            <td>CNPJ*</td>
+                            <td><input type="number" name="codigo" size="11" maxlength="11" min="00000000000" max="99999999999" id="" required></td>
+                            <td><button class="btn btn-primary">Consultar</button></td>
+                        </tr>
+                        <tr>
+                            <td>Razão*</td>
+                            <td><input type="text" name="nomefornecededor" size="25" maxlength="50" id="" required></td>
                         </tr>
                     </table>
                 </fieldset>
@@ -104,7 +107,7 @@
                     </table>
                 </fieldset>
                 <br>
-                <input class="btn btn-primary" type="submit" value="Gravar" onclick="cadastrado()">
+                <input class="btn btn-primary" type="submit" value="Gravar">
                 <input class="btn btn-secondary" type="button" value="Cancelar">
             </fieldset>
         </div>
