alteraçoes de hover

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             background-size: 25%;
             background-position: right;
         }
+        
+        .nav-item:hover {
+            background-color: #1266F1;
+        }
     </style>
     <title>Cadastro de Fornecedores</title>
 </head>
@@ -29,13 +33,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-white" data-toggle="tooltip" data-placement="bottom" title="Clique aqui para cadastrar um Fornecedor" aria-current="page" href="#">Cadastrar Novo Fornecedor</a>
+                            <a class="nav-link text-white" aria-current="page" href="#">Cadastrar Novo Fornecedor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" data-toggle="tooltip" data-placement="bottom" title="Clique aqui para cadastrar um Produto" href="./produtos.html">Cadastrar Produtos</a>
+                            <a class="nav-link text-light" href="./produtos.html">Cadastrar Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  text-light" data-toggle="tooltip" data-placement="bottom" title="Clique aqui para cadastrar um Cliente" href="./clientes.html">Cadastrar Clientes</a>
+                            <a class="nav-link  text-light" href="./clientes.html">Cadastrar Clientes</a>
                         </li>
                     </ul>
                 </div>
