--- a/clientes.html
+++ b/clientes.html
@@ -14,6 +14,10 @@
             background-size: 25%;
             background-position: right;
         }
+        
+        .nav-item:hover {
+            background-color: #1266F1;
+        }
     </style>
     <title>Cadastro de Clientes</title>
 </head>
