--- a/produtos.html
+++ b/produtos.html
@@ -14,6 +14,10 @@
             background-size: 50%;
             background-position: right;
         }
+        
+        .nav-item:hover {
+            background-color: #1266F1;
+        }
     </style>
     <title>Cadastro de Produtos</title>
 </head>
