--- a/clientes.html
+++ b/clientes.html
@@ -39,7 +39,7 @@
                             <a class="nav-link text-light" href="./produtos.html">Cadastrar Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled text-light" href="#">Cadastrar Clientes</a>
+                            <a class="nav-link text-light" href="#">Cadastrar Clientes</a>
                         </li>
                     </ul>
                 </div>
