--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item" id="nav1">
-                            <a class="nav-link disabled text-white" aria-current="page" href="#">Cadastrar Novo Fornecedor</a>
+                            <a class="nav-link disabled text-white" aria-current="page" href="#">Cadastrar Fornecedor</a>
                         </li>
                         <li class="nav-item" id="nav2">
                             <a class="nav-link text-light" href="./produtos.html">Cadastrar Produtos</a>
