--- a/clientes.html
+++ b/clientes.html
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item" id="nav1">
-                            <a class="nav-link text-white" aria-current="page" href="./index.html">Cadastrar Novo Fornecedor</a>
+                            <a class="nav-link text-white" aria-current="page" href="./index.html">Cadastrar Fornecedor</a>
                         </li>
                         <li class="nav-item" id="nav2">
                             <a class="nav-link text-light" href="./produtos.html">Cadastrar Produtos</a>
