arredondamento das bordas dos inputs

--- a/clientes.html
+++ b/clientes.html
@@ -26,6 +26,10 @@
         #nav3 {
             background-color: #dc3545;
         }
+        
+        input {
+            border-radius: 10px;
+        }
     </style>
     <title>Cadastro de Clientes</title>
 </head>
