--- a/produtos.html
+++ b/produtos.html
@@ -26,6 +26,10 @@
         #nav3:hover {
             background-color: #0d6efd;
         }
+        
+        input {
+            border-radius: 10px;
+        }
     </style>
     <title>Cadastro de Produtos</title>
 </head>
