--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         #nav3:hover {
             background-color: #0d6efd;
         }
+        
+        input {
+            border-radius: 10px;
+        }
     </style>
     <title>Cadastro de Fornecedores</title>
 </head>
@@ -65,13 +69,11 @@
                     <table>
                         <tr>
                             <td>CNPJ*</td>
-                            <td><input type="number" name="codigo" size="11" maxlength="11" min="00000000000" max="99999999999" id="" required></td>
-                            <td>
-                                <td><button class="btn btn-primary">Consultar</button></td>
-                            </td>
+                            <td><input type="number" name="codigo" size="30" maxlength="50" id="" required>
+                                <button class="btn btn-primary">Consultar</button></td>
                             <tr>
                                 <td>Razão*</td>
-                                <td><input type="text" name="nomefornecededor" size="25" maxlength="50" id="" required></td>
+                                <td><input type="text" name="nomefornecededor" size="20" maxlength="50" id="" required></td>
                             </tr>
 
                         </tr>
@@ -99,7 +101,7 @@
                     <table>
                         <tr>
                             <td>E-mail*</td>
-                            <td><input type="email" name="emailfornecedor" size="100" maxlength="50" id="" required></td>
+                            <td><input type="email" name="emailfornecedor" size="50" maxlength="50" id="" required></td>
                         </tr>
                         <tr>
                             <td>Data de Cadastro*</td>
