--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <style>
         .fsclass {
@@ -75,8 +76,10 @@
             </div>
         </nav>
     </div>
-    <h2>Cadastro de Produtos</h2>
-    <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
+    <fieldset>
+        <h2>Cadastro de Produtos <i class="fa fa-barcode"></i></h2>
+        <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
+    </fieldset>
     <form action="">
         <div>
             <fieldset id="fsdadosprod">
@@ -100,7 +103,9 @@
                     <table>
                         <tr>
                             <td>Unidade*</td>
-                            <td><input type="text" name="telefonefornecedor1" size=10 maxlength="10" id="" required></td>
+                            <td><input type="text" name="telefonefornecedor1" size="2" maxlength="3" id="" required></td>
+                        </tr>
+                        <tr>
                             <td>Peso*</td>
                             <td><input type="number" name="telefonefornecedor2" size=5 maxlength="5" id="" required>(kg)</td>
                         </tr>
