--- a/clientes.html
+++ b/clientes.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <style>
+        fieldset {
+            display: inline-block;
+        }
+        
         #nav1:hover {
             background-color: #2B7C85;
         }
@@ -71,12 +75,15 @@
             </div>
         </nav>
     </div>
-    <fieldset align="center">
-        <h2>Cadastro de Clientes <i class="fa fa-user"></i></h2>
-        <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
-    </fieldset>
+    <div align="center">
+        <fieldset align="center">
+            <h2>Cadastro de Clientes <i class="fa fa-user"></i></h2>
+            <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
+        </fieldset>
+    </div>
+    <br>
     <form action="">
-        <div>
+        <div align="center">
             <fieldset id="fs1">
                 <legend align="center"><strong>Dados do Produto</strong></legend>
                 <fieldset class="fsclass" style="border:ridge; border-radius:10pt;">
@@ -109,6 +116,7 @@
                         </tr>
                     </table>
                 </fieldset>
+                <br>
                 <fieldset style="border:ridge; border-radius:10pt;">
                     <legend align="center">Endereço</legend>
                     <table align="center">
@@ -156,6 +164,7 @@
                         </tr>
                     </table>
                 </fieldset>
+                <br>
                 <fieldset style="border:ridge; border-radius:10pt;">
                     <legend align="center">Informações Adicionais</legend>
                     <table align="center">
