--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <style>
+        fieldset {
+            display: inline-block;
+        }
+        
         .fsclass {
             background-color: white;
         }
@@ -76,12 +80,14 @@
             </div>
         </nav>
     </div>
-    <fieldset align="center">
-        <h2>Cadastro de Produtos <i class="fa fa-barcode"></i></h2>
-        <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
-    </fieldset>
+    <div align="center">
+        <fieldset align="center">
+            <h2>Cadastro de Produtos <i class="fa fa-barcode"></i></h2>
+            <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
+        </fieldset>
+    </div>
     <form action="">
-        <div>
+        <div align="center">
             <fieldset id="fsdadosprod">
                 <legend align="center"><strong>Dados do Produto</strong></legend>
                 <fieldset class="fsclass" style="border:ridge; border-radius:10pt;">
@@ -98,6 +104,7 @@
                         </tr>
                     </table>
                 </fieldset>
+                <br>
                 <fieldset class="fsclass" style="border:ridge; border-radius:10pt;">
                     <legend align="center">Dimensões e Pesagem</legend>
                     <table align="center">
@@ -115,6 +122,7 @@
                         </tr>
                     </table>
                 </fieldset>
+                <br>
                 <fieldset class="fsclass" style="border:ridge; border-radius:10pt;">
                     <legend align="center">Informações de Fornecedor/Vendas</legend>
                     <table align="center">
