client page correction

--- a/clientes.html
+++ b/clientes.html
@@ -81,11 +81,10 @@
             <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
         </fieldset>
     </div>
-    <br>
     <form action="">
         <div align="center">
             <fieldset id="fs1">
-                <legend align="center"><strong>Dados do Produto</strong></legend>
+                <legend align="center"><strong>Dados do Cliente</strong></legend>
                 <fieldset class="fsclass" style="border:ridge; border-radius:10pt;">
                     <legend align="center">Identificação</legend>
                     <table align="center">
