--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <tr>
                             <td>CNPJ*</td>
                             <td><input type="number" name="codigo" size="30" maxlength="50" id="" required>
-                                <button class="btn btn-primary">Consultar</button></td>
+                                <button id="btnconsultarcnpj" class="btn btn-primary">Consultar</button></td>
                             <tr>
                                 <td>Razão*</td>
                                 <td><input type="text" name="nomefornecededor" size="20" maxlength="50" id="" required></td>
