--- a/clientes.html
+++ b/clientes.html
@@ -37,7 +37,7 @@
         </nav>
     </div>
     <div align="center">
-        <fieldset align="center">
+        <fieldset id="fscadastrocliente" align="center">
             <h2>Cadastro de Clientes <i class="fa fa-user"></i></h2>
             <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
         </fieldset>
