--- a/produtos.html
+++ b/produtos.html
@@ -38,7 +38,7 @@
         </nav>
     </div>
     <div align="center">
-        <fieldset align="center">
+        <fieldset id="fscadastro" align="center">
             <h2>Cadastro de Produtos <i class="fa fa-barcode"></i></h2>
             <h5>Observação: Todos os campos com (*) são obrigatórios!</h5>
         </fieldset>
