adicionado padding nos fieldsets

--- a/clientes.html
+++ b/clientes.html
@@ -149,7 +149,7 @@
                         </tr>
                         <tr>
                             <td>Cor</td>
-                            <td><input type="color" name="statusfornecedor" id=""></td>
+                            <td><input id="clrbrdr" type="color" name="statusfornecedor" id=""></td>
                         </tr>
                         <tr>
                             <td>Cursos que fez</td>
@@ -158,7 +158,7 @@
                     </table>
                 </fieldset>
                 <br>
-                <fieldset align="center">
+                <fieldset id="btngrvecancl" align="center">
                     <input class="btn btn-primary" type="submit" value="Gravar">
                     <button class="btn" id="btncancel">Cancelar</button>
                 </fieldset>
