--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </fieldset>
                 <br>
                 <fieldset align="center">
-                    <input class="btn btn-primary" type="submit" value="Gravar">
+                    <input id="btnsub" class="btn btn-primary" type="submit" value="Gravar">
                     <button class="btn" id="btncancel">Cancelar</button>
                 </fieldset>
             </fieldset>
