--- a/produtos.html
+++ b/produtos.html
@@ -105,12 +105,12 @@
                         </tr>
                         <tr>
                             <td>Imagem</td>
-                            <td><input type="file" name="dataultcompfornecedor" id=""></td>
+                            <td><input id="inputimg" type="file" name="dataultcompfornecedor" id=""></td>
                         </tr>
                     </table>
                 </fieldset>
                 <br>
-                <fieldset align="center">
+                <fieldset id="btnscancel" align="center">
                     <input class="btn" type="submit" value="Gravar">
                     <button id="btncancel" class="btn">Cancelar</button>
                 </fieldset>
